arc: Fix race when arc package sync service starts. Fix the race which happens between initial packagelist refreshed and sync DataTypeController::OnModelStarted by changing the observer of OnAppInstanceReady() to OnPackageListInitialRefreshed().

BUG=652470
Test=Manual Test. Sync service always starts after arc packagelist
refreshes correctly.
Test=Pass sync integration test.

Review-Url: https://codereview.chromium.org/2389763003
Cr-Commit-Position: refs/heads/master@{#423362}

Former-commit-id: 88a14008509adefe2b764ccb573ba629ba68dac5